[package]
name = "const-fnv1a-hash"
version = "1.0.0"
edition = "2018"
description = "A #![no_std] crate for performing FNV1A-16/32/64 hasing on Rust stable at compile time."
license = "MIT"
homepage = "https://github.com/HindrikStegenga/const-fnv1a-hash"
repository = "https://github.com/HindrikStegenga/const-fnv1a-hash"
